--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 }
+ext {
+    kotlin_version = '1.4.21'
+    coroutines_version = '1.4.2'
+    retrofit_version = '2.9.0'
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
