--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     kotlin_version = '1.4.21'
     coroutines_version = '1.4.2'
     retrofit_version = '2.9.0'
+    lifecycle_version = '2.3.0'
 }
 
 task clean(type: Delete) {
