--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
 }
