--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.raywenderlich.podplay">
+<manifest package="com.raywenderlich.podplay"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -10,19 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PodPlay">
-        <activity
-            android:name=".ui.PodcastActivity"
-            android:exported="true"
-            android:launchMode="singleTop">
+        android:theme="@style/Theme.PodPlay"
+        android:usesCleartextTraffic="true"
+        >
+        <activity android:name=".ui.PodcastActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.PodPlay.NoActionBar"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.SEARCH" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.SEARCH"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-            android:theme="@style/Theme.PodPlay.NoActionBar"
+                android:resource="@xml/searchable"/>
         </activity>
     </application>
 
